XD-3082 UI: Add Analytics Tab
Jira: https://jira.spring.io/browse/XD-3082

--- a/ui/app/styles/main.less
+++ b/ui/app/styles/main.less
@@ -210,7 +210,7 @@ table td.action-column {
 }
 
 .status-help-content-table td {
-	color: @spring-brown;
+  color: @spring-brown;
 }
 
 .alert-success {
@@ -252,5 +252,7 @@ table td.action-column {
 hr {
   border-top: 1px dotted @spring-brown;
 }
+
+@import "analytics.less";
 
 @import "responsive.less";
